@@ -8,7 +8,6 @@
     <property name="window_position">center-on-parent</property>
     <property name="default_width">600</property>
     <property name="default_height">400</property>
-    <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
     <child>
@@ -159,7 +158,7 @@
                 </child>
                 <child>
                   <widget class="GtkButton" id="qconnect_connect_button">
-                    <property name="label" translatable="no">gtk-connect</property>
+                    <property name="label">gtk-connect</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="can_default">True</property>
